fix slide_tablet shown up incorrectly on Safari

--- a/fle_site/apps/main/static/css/kickstarter.css
+++ b/fle_site/apps/main/static/css/kickstarter.css
@@ -14,6 +14,13 @@ body {
   margin: 0;
 }
 
+#fle_quote, #fle_timeline, #feature-container, #fle_how, #fle_intro, #kickstarter-header {
+  -webkit-transform:translateZ(1px);
+  -moz-transform:translateZ(1px);
+  -o-transform:translateZ(1px);
+  transform:translateZ(1px);
+}
+
 .fle_title {
   font-size: 40px;
   padding: 90px 0;
@@ -755,6 +762,10 @@ mark{
   height: 60px;
   -webkit-transition: border 0.2s, background 0.2s, color 0.2s;
   transition: border 0.2s, background 0.2s, color 0.2s;
+  -webkit-transform:translateZ(2px);
+  -moz-transform:translateZ(2px);
+  -o-transform:translateZ(2px);
+  transform:translateZ(2px);
 }
 
 .back-to-top:hover {    
